--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": ["./tsconfig.json", "./tsconfig.paths.json"],
+   "compilerOptions": {
+    "outDir": "./dist",
+    "baseUrl": "./",
+  },
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
